feat: add search people by name to api
